

syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "src/main/proto/BasicTypes.proto";

/* The consensus result for a transaction, which might not be currently known, or may  succeed or fail. */
enum TransactionStatus {
    UNKNOWN = 0; // hasn't yet reached consensus, or has already expired
    SUCCESS = 1; // the transaction succeeded
    FAIL_INVALID = 2; // the transaction failed because it is invalid
    FAIL_FEE = 3; // the transaction fee was insufficient
    FAIL_BALANCE = 4; // the paying account had insufficient cryptocurrency
}

/* The consensus result for a transaction, which might not be currently known, or may  succeed or fail. */
message TransactionReceipt {
    TransactionStatus status = 1; // whether the transaction succeeded or failed (or is unknown)

	AccountID accountID = 2; //  the account ID, if a new account was created
	FileID fileID = 3; // the file ID, if a new file was created
	ContractID contractID = 4; // the contract ID, if a new smart contract instance was created
}
